# clozn

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  RUNTIME_SPLIT.md  clozn  clozn.cmd  clozn.sh  clozn_cli.py  index.html  pyproject.toml  setup.py
clozn/: __init__.py  __main__.py  _io.py  brain_readout.py  capture_mode.py  cli.py  clozn_server.py  confidence_spans.py  counterfactual.py  denoise_server.py  explain.py  facts_mode.py  feedback.py  memory_mode.py  (+12 more)
clozn-client/: README.md  ROADMAP_SLICE_PHASE_4_2B.md  ROADMAP_SLICE_PHASE_4_2C.md  pyproject.toml
clozn-client/examples/: README.md  capital-knockout.manifest.json  capital-patch.manifest.json  inspect_run.py  knockout_scan.py  patch_sweep.py  replay_manifest.py
clozn-client/src/clozn_client/: __init__.py  __main__.py  _transport.py  batch.py  compare.py  contracts.py  engine.py  gateway.py  manifests.py  models.py  patch_manifests.py  provenance.py  reporting.py  tensors.py
clozn-client/tests/: test_clients.py
engine/core/: CMakeLists.txt  README.md  build_core.bat  build_cuda.bat  build_gpu.bat  build_sae.bat  build_serve.bat
engine/core/include/cloze/: blocks.hpp  cache.hpp  events.hpp  generate.hpp  generate_ar.hpp  kv.hpp  model.hpp  model_ggml.hpp  policies.hpp  probe.hpp  sae.hpp  sample.hpp  selector.hpp  selector_kernel.hpp  stepper.hpp  whitebox.hpp
engine/core/serve/: README.md  chat_template_renderer.cpp  chat_template_renderer.hpp  cloze_server.cpp  readout_plane.hpp  routes_jlens.cpp  routes_state.cpp  routes_whitebox.cpp  server_context.hpp  server_main.cpp  server_shared.hpp  viz_html.hpp
engine/core/src/: blocks.cpp  cache.cpp  events.cpp  generate.cpp  generate_ar.cpp  model_ggml.cpp  policies.cpp  sae_encoder.cu  sample.cpp  selector.cpp  selector_kernel.cu
engine/core/tests/: fake_adapter.hpp  test_blocks.cpp  test_cache.cpp  test_chat_template_renderer.cpp  test_device_logits.cpp  test_events.cpp  test_generate.cpp  test_ggml_forward.cpp  test_ggml_generate.cpp  test_ggml_state_write.cpp  test_infill.cpp  test_kernel_selector.cu  test_policies.cpp  test_revision.cpp  test_sae_encoder.cpp  test_sae_topk.cu  test_state_write.cpp  test_stepper.cpp  test_zerocopy.cpp
engine/core/tools/: cloze_ar.cpp  cloze_arbench.cpp  cloze_bench.cpp  cloze_cli.cpp  cloze_probe_sweep.cpp  dump_sae_vectors.py  export_sae_weights.py
engine/kernels/confidence_select/: CMakeLists.txt  README.md  confidence_select.cuh  test_confidence_select_reference.py  validate.cu  validate.py
engine/kernels/sae_topk/: CMakeLists.txt  build_cuda.bat  sae_topk.cu  sae_topk.cuh  test_main.cpp  test_sae_topk_reference.py  validate.cu  validate.py
engine/lab/: pyproject.toml
engine/lab/cloze_lab/: __init__.py  __main__.py  cli.py  effort.py  generate.py  golden.py
engine/lab/cloze_lab/bench/: __init__.py  divergence.py  e2e_handoff.py  report.py  speed.py
engine/lab/cloze_lab/bench/results/: dcoder_mn32_s4_bl8.md  dcoder_mn32_s4_bl8__delta_refresh1.jsonl  dcoder_mn32_s4_bl8__off.jsonl  dream_mn48_s4_bl8_nf4.md  dream_mn48_s4_bl8_nf4__delta_refresh1.jsonl  dream_mn48_s4_bl8_nf4__off.jsonl  dream_mn48_s8_bl8_nf4.md  dream_mn48_s8_bl8_nf4__delta_refresh1.jsonl  dream_mn48_s8_bl8_nf4__off.jsonl
engine/lab/cloze_lab/models/: __init__.py  base.py  dream.py  fake.py  llada.py
engine/lab/cloze_lab/render/: __init__.py  tui.py
engine/lab/cloze_lab/scheduler/: __init__.py  blocks.py  cache.py  events.py  policies.py  stepper.py
engine/lab/tests/: conftest.py  test_base.py  test_bench.py  test_blocks.py  test_cache.py  test_cli.py  test_dcoder_adapter.py  test_dream_adapter.py  test_effort.py  test_events.py  test_generate.py  test_golden.py  test_infill.py  test_llada_adapter.py  test_policies.py  test_revision.py  test_stepper.py  test_tui.py
engine/lab/tests/golden/: _generate.py  dcoder_add.json  dcoder_add_blocks.json  dream_paris.json  dream_paris_blocks.json  fake_adaptive_min_commit.json  fake_adaptive_threshold.json  fake_adaptive_tmax_holes.json  fake_blocks_eos_early.json  fake_blocks_greedy.json  fake_blocks_partial.json  fake_cache_delta.json  fake_cache_delta_blocks.json  fake_cache_off.json  fake_eos_truncation.json  fake_fixedk2_greedy.json  fake_quota_greedy.json  fake_quota_sampled.json  fake_quota_uneven.json  fake_steps_exhausted.json
inspector/: DESIGN.md  README.md  conftest.py  diag_layer.py  diag_sae.py  pyproject.toml  requirements.txt
inspector/clozn/: __init__.py  atlas.py  corpora.py  dashboard.py  discover.py  features.py  inspect.py  memory.py  ops.py  probes.py  spine.py  store.py  viz.py
inspector/clozn/sources/: __init__.py  diffusion.py  engine.py  fla_rwkv.py  hf_rwkv.py  hf_transformer.py  toy_recurrent.py
inspector/demo/: app.html  atlas.json  atlas_emergent.json  brain.html  brain_data.js  clozn.css  denoise.html  engine.html  inspector.html  instrument.html  memory.html  memory_chat.html  memory_live.html  memory_server.py  memory_timeline.json  memory_window.py  studio.html  think_graph.py  thinking_panel.py  watch_it_think.py  workspace_lens_trace.jsonl
inspector/demo/pages/: agent.js  app.js  behavior.js  lab.js  memory.js  run.js  runs.js  settings.js
inspector/spikes/: explain_concepts.py  m1_rwkv.py  m2_watch.py  m3_probe.py  m4_persist.py  p10_slotmem2.py  p11_slotlegible.py  p12_recall.py  p13_memlegible.py  p14_mixer.py  p15_fastweight.py  p16_capacity.py  p17_betterkey.py  p18_conceptmem.py  p19_generalize.py  p2_diffusion.py  p3_atlas.py  p3_discover.py  p3_discover_big.py  p3_discover_open.py  p3_discover_steer.py  p3_features.py  p3_memory.py  p3_transcoder.py  p4_big_sae.py  p4_dream_probe.py  p4_dream_trace.py  p4_engine_discover.py  p4_qwen_discover.py  p4_qwen_transcoder.py  p5_memslot.py  p5_selfgate.py  p5_transcoder_scale.py  p6_autointerp.py  p6_memedit.py  p7_scale_7b.py  p7_slottrain.py  p8_gpt2_control.py  p8_slotprobe.py  p9_autointerp_calibrated.py  (+4 more)
inspector/tests/: test_atlas.py  test_dashboard.py  test_diffusion.py  test_discover.py  test_engine_source.py  test_memory.py  test_ops.py  test_rwkv_model.py  test_spine.py  test_store.py
(+786 files in other folders)
