[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clozn-client"
version = "0.11.0"
description = "Typed Python clients and receipt-backed native intervention contracts and replayable manifests for Clozn"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Brigitte Kawaguchi" }]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.optional-dependencies]
arrays = ["numpy>=1.26"]

[project.urls]
Repository = "https://github.com/bkawa-io/clozn"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clozn_client = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
