[project]
name = "clozn"
version = "0.0.1"
description = "Clozn — a white-box local-LLM runtime: watch, probe, snapshot, edit, and steer a model's evolving internal state."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
# the recurrent substrate (RWKV-4 via transformers — no Triton needed)
recurrent = [
    "torch>=2.1",
    "transformers>=4.40",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clozn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "model: loads a real checkpoint (RWKV-4-169m via transformers); slower, gated. Run with -m model.",
]
