[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloze-lab"
version = "0.1.0"
description = "Python reference playground for Cloze, a local diffusion-LM runtime (Phase 1)"
license = { text = "MIT" }
authors = [{ name = "Brigitte Kawaguchi" }]
requires-python = ">=3.11"
dependencies = [
    "torch",
    # dLLM checkpoints (Dream, LLaDA, open-dCoder) ship trust_remote_code modeling
    # files written for the transformers 4.4x API; v5 broke their RoPE init.
    "transformers>=4.46,<5",
    "rich",
    "numpy",
]

[project.urls]
Repository = "https://github.com/bkawa-bot/cloze"

[project.scripts]
cloze = "cloze_lab.cli:main"

[project.optional-dependencies]
dev = ["pytest"]
# GPU-only weight quantization (the §9 quantization-vs-confidence study); the
# product quantizes via GGUF/ggml, so these are not core deps.
gpu = ["bitsandbytes", "accelerate"]

[tool.hatch.build.targets.wheel]
packages = ["cloze_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires a GPU; CPU-only CI deselects with -m 'not gpu'",
    "checkpoint: needs multi-GB local model checkpoints; auto-skips when absent from the HF cache",
]
